--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Non-project-specific build files:
+build.xml
+local.properties
+/gradlew
+/gradlew.bat
+/gradle
+.gradle
+# Ant builds
+ant-build
+ant-gen
+# Eclipse builds
+gen
+out
+# Android Studio
+.idea
+*.iml
+
 # Built application files
 *.apk
 *.ap_
